# ohdio

./: .dockerignore  .gitignore  AGENTS.md  CATEGORY_SCRAPING_FLOW_ANALYSIS.md  DOWNLOAD_FIXES_SUMMARY.md  Dockerfile  Dockerfile.prod  LICENSE  README.md  app.py  check_job_errors.exs  compose.prod.yml  compose.yml  config.json  dc  docker-entrypoint.sh  enqueue_missing_downloads.exs  find_bad_urls.exs  main.py  mix.exs  phoenix-dev.sh  pyproject.toml  requirements.txt  retry_failed_downloads.exs  test_ohdio.py
.github/workflows/: docker-publish.yml
archive/python_original/: CLAUDE.md  Dockerfile.gradio  test_ohdio.py  test_setup.py
assets/css/: app.css
assets/js/: app.js
backlog/: config.yml
backlog/docs/: AUTOMATIC_DOWNLOAD_PLAN.md  PHOENIX_MIGRATION_GUIDE.md
backlog/tasks/: task-1 - Phase-1-Bootstrap-Phoenix-App.md  task-10 - Enhanced-Logging-and-Monitoring.md  task-11 - Add-UI-feedback-for-category-scraping-progress.md  task-12 - Unify-Home-and-Queue-pages-into-single-view.md  task-13 - Make-Supported-URL-Types-section-collapsible.md  task-14 - Improve-OHdio-Downloader-UI-layout-and-visual-polish.md  task-15 - Fix-category-scrape-not-populating-queue-with-audiobooks.md  task-16 - Rename-Queue-to-Home-and-cleanup-navbar.md  task-17 - Implement-download-worker-to-process-queued-audiobooks.md  task-18 - Fix-download-worker-not-processing-queued-items-from-category-scrapes.md  task-19 - Implement-automatic-download-processing-for-queued-items.md  task-2 - Phase-2-Database-Schema-&-Contexts.md  task-20 - Fix-image-artwork-extraction-and-display-for-Radio-Canada-Ohdio-audiobooks.md  task-21 - Fix-author-extraction-from-Radio-Canada-Ohdio-API.md  task-22 - Make-library-page-styles-consistent-with-queue-home-page.md  task-23 - Add-bulk-download-functionality-to-library-page.md  task-24 - Add-items-list-view-to-the-library-page-for-bulk-actions.md  task-25 - Integrate-library-page-toolbars-into-unified-control-panel.md  task-26 - Add-Spotify-track-playlist-album-download-support.md  task-27 - Push-changes-to-main-and-verify-Docker-image-publishing.md  task-28 - Refactor-Docker-setup-to-follow-linuxserver.io-conventions.md  task-29 - Deploy-application-to-fly.io.md  task-3 - Phase-3-Basic-Scraping-Logic.md  task-30 - Clean-up-navbar-branding-and-remove-Phoenix-defaults.md  task-31 - Reduce-or-remove-page-header-spacing-for-more-compact-layout.md  task-4 - Phase-4-Download-Workers-with-Queue-Control.md  task-5 - Phase-5-LiveView-UI-Home-Page.md  task-6 - Phase-6-LiveView-UI-Queue-Management.md  task-7 - Phase-7-LiveView-UI-Library-Browser.md  task-8 - Phase-8-Polish-&-Testing.md
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docs/: COMMIT_GUIDELINES.md  DEVELOPMENT_GUIDE.md  PRODUCT_GUIDE.md
lib/: ohdio.ex  ohdio_web.ex
lib/ohdio/: application.ex  downloads.ex  library.ex  release.ex  repo.ex  scraper.ex
lib/ohdio_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
priv/repo/: seeds.exs
scripts/: check_queue_state.exs  reset_download_queue.exs  test_api.exs  yt-dlp-updater.sh
src/: __init__.py  main.py
src/downloader/: __init__.py  (+1 more)
test/: test_helper.exs
(+61 files in other folders)
